import { Box, Text } from "native-base"

export const Moves = () => {
    return (            
    <>
    <Box flexDirection="row" paddingY="5px">
        <Text paddingLeft="5px">Moves</Text> <Text>Moves</Text>
    </Box>
    <Box flexDirection="row" paddingY="5px">
        <Text paddingLeft="5px" >Moves</Text> <Text>Moves</Text>
    </Box>
    <Box flexDirection="row" paddingY="5px">
        <Text paddingLeft="5px" >Moves</Text> <Text>Moves</Text>
    </Box>
    <Box flexDirection="row" paddingY="5px">
        <Text paddingLeft="5px" >Moves</Text> <Text>Moves</Text>
    </Box>
  </>
  )
}