# flow.yaml

appId: com.Pokemon
---
- openLink: exp://192.168.1.26:19000
- tapOn:
    id: "Open Pokedex"
- tapOn:
    id: "bulbasaur"
- tapOn:
    id: "Moves"